language/move-lang/tests/move_check/parser/invalid_character.exp
error: 

   ┌── tests/move_check/parser/invalid_character.move:1:12 ───
   │
 1 │ address 0x1~
   │            ^ Invalid character: '~'
   │

