language/move-lang/tests/move_check/parser/invalid_character.move
address 0x1~
